--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Replace with your avatar link -->
       <img class="avatar" src="https://avatars.githubusercontent.com/u/1?v=4" alt="avatar" />
       <div>
-        <h1>Your Name</h1>
+        <h1>Xiaoyan Gu</h1>
         <div>One sentence intro: Research area / Profession / Interests</div>
         <nav style="margin-top:8px;">
           <a href="#about">About</a>
