--- a/index.html
+++ b/index.html
@@ -2,99 +2,173 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Name · Personal Homepage</title>
-  <meta name="description" content="A short sentence introducing yourself or your research/work area.">
-  <meta property="og:title" content="Your Name · Personal Homepage">
-  <meta property="og:description" content="A short sentence introducing yourself or your research/work area.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-username.github.io/">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Xiaoyan Gu · Academic Homepage</title>
+  <meta name="description" content="Academic homepage of Xiaoyan Gu, Software Engineering undergraduate at Chongqing University.">
   <style>
-    :root { --maxw: 860px; }
-    * { box-sizing: border-box; }
     body {
-      margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC",
-      "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
+      font-family: Georgia, "Times New Roman", serif;
+      margin: 0;
+      padding: 0;
       line-height: 1.6;
-      color: #111; background: #fff;
+      color: #333;
+      background: #fafafa;
     }
     header {
-      border-bottom: 1px solid #eee; background: #fafafa;
+      background: #2c3e50;
+      color: #fff;
+      padding: 1.5rem 1rem;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-    .wrap { max-width: var(--maxw); margin: 0 auto; padding: 20px; }
-    .hero { display: grid; grid-template-columns: 96px 1fr; gap: 16px; align-items: center; }
-    .avatar {
-      width: 96px; height: 96px; border-radius: 50%; background: #ddd; object-fit: cover;
+    header h1 {
+      margin: 0.2rem 0;
+      font-size: 2rem;
+      font-weight: bold;
     }
-    h1 { margin: 0; font-size: 28px; }
-    nav a { margin-right: 14px; text-decoration: none; color: #0366d6; }
-    section { padding: 28px 0; border-bottom: 1px solid #f2f2f2; }
-    h2 { margin: 0 0 8px; font-size: 22px; }
-    .cards { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 14px; }
-    .card { border: 1px solid #eee; border-radius: 12px; padding: 16px; background: #fff; }
-    .card h3 { margin: 0 0 6px; font-size: 18px; }
-    footer { text-align: center; font-size: 14px; color: #666; padding: 24px 0; }
-    @media (prefers-color-scheme: dark) {
-      body { color: #eaeaea; background: #0d1117; }
-      header { border-color: #222; background: #0d1117; }
-      section { border-color: #1b1f24; }
-      .card { border-color: #222; background: #0f151b; }
-      nav a { color: #58a6ff; }
+    header p {
+      margin: 0.2rem 0;
+      font-size: 1rem;
+    }
+    nav {
+      margin-top: 0.5rem;
+    }
+    nav a {
+      margin: 0 0.8rem;
+      color: #ecf0f1;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    section {
+      margin-bottom: 3rem;
+    }
+    h2 {
+      color: #2c3e50;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.3rem;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    a {
+      color: #2980b9;
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem;
+      font-size: 0.9rem;
+      background: #2c3e50;
+      color: #fff;
+      margin-top: 3rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="wrap hero">
-      <!-- Replace with your avatar link -->
-      <img class="avatar" src="https://avatars.githubusercontent.com/u/1?v=4" alt="avatar" />
-      <div>
-        <h1>Xiaoyan Gu</h1>
-        <div>One sentence intro: Research area / Profession / Interests</div>
-        <nav style="margin-top:8px;">
-          <a href="#about">About</a>
-          <a href="#projects">Projects</a>
-          <a href="#contact">Contact</a>
-          <a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a>
-        </nav>
-      </div>
-    </div>
+    <h1>Xiaoyan Gu</h1>
+    <p>Undergraduate Student · Software Engineering · Chongqing University</p>
+    <p>
+      📧 <a href="mailto:your_email@example.com">your_email@example.com</a> · 
+      📱 +86-XXX-XXXX-XXXX
+    </p>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#research">Research</a>
+      <a href="#projects">Projects</a>
+      <a href="#skills">Skills</a>
+      <a href="#cv">CV</a>
+    </nav>
   </header>
 
-  <main class="wrap">
-    <section id="about">
+  <main>
+    <!-- Home -->
+    <section id="home">
       <h2>About Me</h2>
-      <p>Introduce yourself here: your school/company, research area, tech stack, or what you are currently working on.</p>
+      <p>
+        I am an undergraduate student in <strong>Software Engineering</strong> at <strong>Chongqing University</strong>. 
+        My research interests include <em>vulnerability detection, software security, data flow analysis, and AI for software engineering</em>. 
+        I am also interested in applications of AI in cultural heritage and intelligent systems.
+      </p>
     </section>
 
+    <!-- Research -->
+    <section id="research">
+      <h2>Research Experience</h2>
+      <ul>
+        <li>
+          <strong>Security Vulnerability Detection with Pre-Trained Models</strong> (Jul. 2023 – Jan. 2024)<br>
+          Proposed a novel data flow embedding method to enhance vulnerability detection. 
+          Paper accepted at <em>Internetware 2024 (CCF-C)</em>. Patent submitted.<br>
+          <em>Advisor: Prof. Haibo Hu, Researcher Meng Yan</em>
+        </li>
+        <li>
+          <strong>Visualization of Vulnerability Propagation in NPM Libraries</strong> (Jul. 2023 – Jul. 2024)<br>
+          Designed tools to visualize how vulnerabilities propagate through dependencies in open-source software.<br>
+          <em>Advisor: Prof. Haibo Hu, Researcher Meng Yan</em>
+        </li>
+        <li>
+          <strong>Medical Insurance Fraud Detection with AIGC</strong> (Feb. 2024 – May 2024)<br>
+          Applied LLM prompt engineering and agent technologies to improve interpretability of fraud detection models.<br>
+          <em>Advisor: Prof. Mengning Yang</em>
+        </li>
+        <li>
+          <strong>Distributed System Fault Diagnosis</strong> (Jun. 2023 – Aug. 2023)<br>
+          Developed ML-based diagnosis model (F1 = 86%), implemented visualization website using Django.<br>
+          <em>Advisor: Prof. Jun Zeng</em>
+        </li>
+        <li>
+          <strong>“Wonderful Miao World” Virtual Museum</strong> (May 2023 – Dec. 2023)<br>
+          Built VR-supported platform to preserve and showcase Miao intangible cultural heritage. Exhibited at Chongqing Raffles City.<br>
+          <em>Advisor: Prof. Lili Yang</em>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Projects -->
     <section id="projects">
       <h2>Selected Projects</h2>
-      <div class="cards">
-        <article class="card">
-          <h3><a href="https://github.com/your-username/your-project" target="_blank" rel="noopener">Project A</a></h3>
-          <p>One sentence about what it solves, technologies used, and its results.</p>
-        </article>
-        <article class="card">
-          <h3><a href="https://github.com/your-username/your-project" target="_blank" rel="noopener">Project B</a></h3>
-          <p>Another featured work; or replace it with a paper/design portfolio link.</p>
-        </article>
-        <article class="card">
-          <h3><a href="#" target="_blank" rel="noopener">More Works</a></h3>
-          <p>Link to your portfolio, blog, or other showcases here.</p>
-        </article>
-      </div>
+      <ul>
+        <li><strong>DFEPT</strong>: Data Flow Embedding model improving CodeBERT F1 by +17.26% on Devign dataset.</li>
+        <li><strong>NPM Vulnerability Visualization</strong>: Interactive tool for dependency-based vulnerability analysis.</li>
+        <li><strong>Fraud Detection Dashboard</strong>: Prototype system for interpretable healthcare fraud monitoring.</li>
+        <li><strong>Fault Diagnosis WebApp</strong>: Real-time distributed system monitoring using ML & Django.</li>
+        <li><strong>VR Digital Museum</strong>: Cultural heritage exhibition platform integrating VR & web technologies.</li>
+      </ul>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:you@example.com">you@example.com</a> · WeChat / Telegram / LinkedIn (optional)</p>
+    <!-- Skills -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Programming: C++, Python, PyTorch</li>
+        <li>Web Development: HTML/CSS/JavaScript, Vue.js, React.js, Flask, Django</li>
+        <li>Other Tools: LaTeX, Figma</li>
+        <li>Languages: English (CET-4: 544, CET-6: 479)</li>
+      </ul>
+    </section>
+
+    <!-- CV -->
+    <section id="cv">
+      <h2>Curriculum Vitae</h2>
+      <p>
+        You can download my CV here: 
+        <a href="resume.pdf" target="_blank">[PDF Link]</a>
+      </p>
     </section>
   </main>
 
   <footer>
-    © <span id="year"></span> Your Name · Powered by GitHub Pages
+    © 2025 Xiaoyan Gu · Academic Homepage
   </footer>
-
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
